--- a/files/styles.css
+++ b/files/styles.css
@@ -74,11 +74,11 @@ form {
     width: 35%;
     margin: 1rem auto 0 auto;
 }
-
+/*
 label {
     text-align: center;
 }
-
+*/
 [type='text'] {
     height: 2rem;
     margin: .7rem 0;
@@ -87,7 +87,7 @@ label {
 }
 
 #screen {
-    height: 75%;
+    height: 70%;
     overflow-y: auto;
 }
 
@@ -95,9 +95,15 @@ label {
     padding: 1rem 0 0 0;
     gap:.5rem;
 }
-
+/*
 .validationResults {
     text-align: center;
+    font-size: 1.3rem;
+}
+*/
+.validationResults,label {
+    text-align: center;
+    font-size: 1.3rem;
 }
 
 #buttons {
@@ -183,7 +189,7 @@ footer {
 }
 
 @media (width < 425px) {
-    html {
-        font-size: 13px;
+    h1 {
+        font-size: 1.6rem;
     }
 }
